# my-todo

./: .gitignore
Backend/: pyproject.toml  requirements.txt
Backend/app/: main.py
Backend/app/api/routes/: tasks.py
Backend/app/core/: config.py  database.py
Backend/app/repositories/: task_repository.py
Backend/app/schemas/: task.py
backend/: index.js  package-lock.json  package.json
backend/src/: app.js
backend/src/config/: cors.js  db.js  env.js
backend/src/controllers/: task.controller.js
backend/src/models/: task.model.js
backend/src/routes/: health.routes.js  index.js  task.routes.js
frontend/: package-lock.json  package.json
frontend/app/: TaskBoardMobileDialog.tsx  layout.tsx  page.tsx
frontend/app/components/tasks/: TaskDetails.tsx  TaskFilters.tsx  TaskForm.tsx  TaskList.tsx  TasksPage.tsx
frontend/lib/: api.ts  date.ts
