[project]
name = "todo-backend"
version = "0.1.0"
description = "Task management backend using FastAPI + MongoDB Atlas"
requires-python = ">=3.11"

# This is mostly documentation if you're using plain pip,
# but it's nice to keep deps listed here:
dependencies = [
  "fastapi[standard]",
  "motor",
  "pydantic-settings",
  "pymongo[srv]",
  "python-dotenv",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
pythonPlatform = "Windows"
reportMissingImports = "warning"

[[tool.basedpyright.executionEnvironments]]
root = "."
extraPaths = ["app"]
